Changes in mirt 1.7

  - document theory of bifactor/two-tier models better

  - added confidence envelope plots to `PLCI.mirt`, and throw warnings when
  intervals could not be located

  - `coef()` now accepts a `simplify` logical, indicating whether the
  items should be collapsed to a matrix and returned as a list of length 2
  (suggested by Michael Friendly)

Changes in mirt 1.6.1

MAJOR CHANGES

  - `sirt` package added to suggests list. Special thanks to Alexander
  Robitzsch (author of `sirt`) for developing useful wrapper functions for
  mirt such as `mirt.wrapper.coef()`, `tam2mirt()`, and `lavaan2mirt()`. As
  well, many examples in `sirt` demonstrate the possibility of estimating
  specialized IRT models with `mirt`, such as the: Ramsay quotient,
  latent class, mixed Rasch, located latent class, probabilistic Guttman,
  nonparametric, discrete graded membership, and multidimensional IRT discrete
  traits, DINA, and Rasch copula models.

  - exploratory IRT models are no longer rotated by default in `coef()`,
  and now requires an explicit `rotate` argument

  - computation of `S_X2` statistic in `itemfit` now much more stable for
  polytomous item types

  - support for the `plink` package now unofficially dropped because it was
  removed from CRAN

  - data inputs are now required to have category spacing codings exactly
  equal to 1 (e.g., [0, 1, 2, ...]; patterns such as [0, 2, 3] which are
  implicitly missing spaces are now invalid)

NEW FEATURES

  - `mdirt` function added to model discrete latent variables such as latent
  class analysis for dichotomous and polytomous items. Can be used to model
  several other discrete IRT models as well, such as the located latent
  class model, multidimensional IRT with discrete traits, DINA models,
  etc. See the examples and documentation for details

  - axillary support for `DiscreteClass` objects added to `itemfit()`,
  `M2()`, `fscores()`, `wald()`, and `boot.mirt()`
