@@ -1,7 +1,7 @@
 #' Specify model loadings
 #'
 #' The \code{mirt.model} function scans/reads user input to specify the
-#' confirmatory model. Item locations must be used in the specifications if no 
+#' confirmatory model. Item locations must be used in the specifications if no
 #' \code{itemnames} argument is supplied.
 #'
 #' Factors are first named and then specify which numerical items they affect
@@ -12,8 +12,8 @@
 #' 'enter' or 'return' key), or instead read in an input version of the model syntax.
 #'
 #' There is an optional keyword for specifying the correlation between relationships between factors
-#' called \code{COV}, and non-linear factor products can be included by enclosing the product 
-#' combination on the left hand side of the declaration (e.g., \code{(F1*F1)} would create a 
+#' called \code{COV}, and non-linear factor products can be included by enclosing the product
+#' combination on the left hand side of the declaration (e.g., \code{(F1*F1)} would create a
 #' quadratic factor for \code{F1}).
 #'
 #' \describe{
@@ -23,26 +23,31 @@
 #'   to estimate all the possible correlations (e.g., F1*F2*F3)}
 #' \item{CONSTRAIN}{A bracketed, comma separated list specifying equality constrains between items.
 #'   The input format is
-#'   \code{CONSTRAIN = (items, ..., parameterName, OptionalGroup), 
+#'   \code{CONSTRAIN = (items, ..., parameterName(s), OptionalGroup),
 #'   (items, ..., parameterName, OptionalGroup)}.
 #'   If \code{OptionalGroup} is omitted then the constraints are applied within all groups.
-#'   For example, in a single group 10-item dichotomous tests, using the default 2PL model, 
-#'   the first and last 5 item slopes (a1) can be constrained to be equal by using 
+#'   For example, in a single group 10-item dichotomous tests, using the default 2PL model,
+#'   the first and last 5 item slopes (a1) can be constrained to be equal by using
 #'   \code{CONSTRAIN = (1-5, a1), (6-10, a1)}, or some combination
-#'   such as \code{CONSTRAIN = (1-3,4,5,a1), (6,7,8-10,a1)}}
+#'   such as \code{CONSTRAIN = (1-3,4,5,a1), (6,7,8-10,a1)}.
+#'
+#'   When constraining parameters to be equal within an item (e.g., for factor loading
+#'   'doubles') declare the respective item and use multiple parameter names. For
+#'   instance, to constrain two slopes to be equal within the first item, use
+#'   \code{CONSTRAIN = (1, a1, a2)}}
 #' \item{CONSTRAINB}{A bracketed, comma separate list specifying equality constrains between groups.
-#'   The input format is \code{CONSTRAINB = (items, ..., parameterName), 
+#'   The input format is \code{CONSTRAINB = (items, ..., parameterName),
 #'   (items, ..., parameterName)}.
-#'   For example, in a two group 10-item dichotomous tests, using the default 2PL model, the first 
-#'   5 item slopes (a1) can be constrained to be equal across both groups by using 
+#'   For example, in a two group 10-item dichotomous tests, using the default 2PL model, the first
+#'   5 item slopes (a1) can be constrained to be equal across both groups by using
 #'   \code{CONSTRAINB = (1-5, a1)}, or some combination such as \code{CONSTRAINB = (1-3,4,5,a1)}}
 #' \item{PRIOR}{A bracketed, comma separate list specifying prior parameter distributions.
-#'   The input format is 
+#'   The input format is
 #'   \code{PRIOR = (items, ..., parameterName, priorType, val1, val2, OptionalGroup),
 #'   (items, ..., parameterName, priorType, val1, val2, OptionalGroup)}.
 #'   If \code{OptionalGroup} is omitted then the priors are defined for all groups.
-#'   For example, in a single group 10-item dichotomous tests, using the default 2PL model, 
-#'   defining a normal prior of N(0,2) for the first 5 item intercepts (d) can be defined by 
+#'   For example, in a single group 10-item dichotomous tests, using the default 2PL model,
+#'   defining a normal prior of N(0,2) for the first 5 item intercepts (d) can be defined by
 #'   \code{PRIOR = (1-5, d, norm, 0, 2)}}
 #' \item{MEAN}{A comma separated list specifying which latent factor means to freely estimate.
 #'   E.g., \code{MEAN = F1, F2} will free the latent means for factors F1 and F2}
@@ -52,7 +57,7 @@
 #'   either with integer or logical values. If the Q-matrix method
 #'   is chosen covariances terms can be specified with the \code{COV} input
 #' @param itemnames a character vector or factor indicating the item names. If a data.frame or
-#'   matrix object is supplied the names will be extracted using \code{colnames(itemnames)}. 
+#'   matrix object is supplied the names will be extracted using \code{colnames(itemnames)}.
 #'   Supplying this input allows the syntax to be specified with the raw item names rather than
 #'   item locations
 #' @param file a input specifying an external file that declares the input.
@@ -60,7 +65,7 @@
 #' @param quiet logical argument passed to \code{scan()} to suppress console read message
 #' @param ... additional arguments for \code{scan()}
 #' @return Returns a model specification object to be used in
-#'   \code{\link{mirt}}, \code{\link{bfactor}}, \code{\link{multipleGroup}}, or 
+#'   \code{\link{mirt}}, \code{\link{bfactor}}, \code{\link{multipleGroup}}, or
 #'   \code{\link{mixedmirt}}
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com} and Alexander Robitzsch
 #' @export mirt.model
@@ -102,25 +107,25 @@
 #'       CONSTRAIN = (1-2, a1)
 #'       CONSTRAINB = (1-3, 5, 6, a1), (1-10, d)'
 #' model <- mirt.model(s)
-#' 
-#' 
+#'
+#'
 #' ## specify model using raw item names
 #' data(data.read, package = 'sirt')
 #' dat <- data.read
-#' 
+#'
 #' # syntax with variable names
 #' mirtsyn2 <- "
 #'        F1 = A1,B2,B3,C4
 #'        F2 = A1-A4,C2,C4
-#'        MEAN = F1 
+#'        MEAN = F1
 #'        COV = F1*F1, F1*F2
 #'        CONSTRAIN=(A2-A4,a2),(A3,C2,d)
 #'        PRIOR = (C3,A2-A4,a2,lnorm, .2, .2),(B3,d,norm,0,.0001)"
-#' # create a mirt model            
+#' # create a mirt model
 #' mirtmodel <- mirt.model(mirtsyn2, itemnames=dat)
-#' # or equivelently: 
+#' # or equivelently:
 #' # mirtmodel <- mirt.model(mirtsyn2, itemnames=colnames(dat))
-#' 
+#'
 #' # mod <- mirt(dat , mirtmodel)
 #'
 #'     }
@@ -129,11 +134,11 @@ mirt.model <- function(input = NULL, itemnames = NULL, file = "", COV = NULL, qu
     # split_syn_string vectorized input
     split_syn_string_vec <- function( syn, vecstr ){
         for (vv in vecstr){
-            syn <- split_syn_string( syn , vv  )    
+            syn <- split_syn_string( syn , vv  )
         }
         return(syn)
     }
-    
+
     # cleans syntax in a vector from strings vv
     split_syn_string <- function( syn , vv ){
         syn <- as.list(syn )
@@ -142,35 +147,35 @@ mirt.model <- function(input = NULL, itemnames = NULL, file = "", COV = NULL, qu
         if (LL>0){
             for (ii in 1:LL){
                 ll <- syn.vv[ii]
-                syn.ll <- syn[[ll]]    	
+                syn.ll <- syn[[ll]]
                 syn[[ll]] <- split_conc( syn.ll , vv )
             }
         }
         syn <- unlist(syn)
         return(syn)
     }
-    
+
     # splits a string syn.ll and concatanates it with string vv
     split_conc <- function( syn.ll , vv ){
-        g1 <- strsplit( syn.ll , vv , perl=FALSE )[[1]] 
+        g1 <- strsplit( syn.ll , vv , perl=FALSE )[[1]]
         Lg1 <- length(g1)
         vec <- NULL
         if (Lg1 == 1 ){ vec <- c( g1 , vv ) }
         if (Lg1 > 1 ){
             vec <- rep("" , Lg1 + (Lg1-1) )
             vec[ seq( 1 , 2*Lg1 , 2 ) ] <- g1
-            vec[ seq( 2 , 2*Lg1 - 1 , 2 ) ] <- vv	
+            vec[ seq( 2 , 2*Lg1 - 1 , 2 ) ] <- vv
             Ls1 <- nchar(syn.ll)
             if ( substring( syn.ll , Ls1 , Ls1 ) == vv ){
                 vec <- c( vec , vv )
             }
-        }	
+        }
         return(vec)
     }
-    
+
     if(!is.null(itemnames)){
         # the following block of code and above functions were largely contributed by Alexander
-        
+
         # mirt syntax splitted
         inputsyntax <- input
         mirtsyn2 <- gsub( ";" , "\n" , input )
@@ -179,27 +184,27 @@ mirt.model <- function(input = NULL, itemnames = NULL, file = "", COV = NULL, qu
         if (is.matrix(itemnames) || is.data.frame(itemnames)){
             items <- colnames(itemnames)
         } else items <- as.character(itemnames)
-        
+
         # admissible strings
-        vecstr <- c( "\n" , "\\(" , "=" , "-" , "," , "\\)" )        
+        vecstr <- c( "\n" , "\\(" , "=" , "-" , "," , "\\)" )
         # process syntax
         for (vv in vecstr){
-            syn <- split_syn_string( syn , vv  )    
-        }        
-        # postprocess syntax                                    
+            syn <- split_syn_string( syn , vv  )
+        }
+        # postprocess syntax
         syn <- syn[ syn != "" ]
         syn[ syn == "\\(" ] <- "("
-        syn[ syn == "\\)" ] <- ")"   
-        
+        syn[ syn == "\\)" ] <- ")"
+
         # substitute variables by numbers
         VV <- length(items)
         useditems <- NULL
         for (vv in 1:VV){
             ind <- which( syn == items[vv] )
             if (length(ind) > 0 ){
-                syn[ ind ] <- vv 
-                useditems <- c( useditems , items[vv] )   
-            }               
+                syn[ ind ] <- vv
+                useditems <- c( useditems , items[vv] )
+            }
         }
         syn <- paste0( syn , collapse="")
         mirtmodel <- mirt.model(syn)
